kubernetes/janus-core.yaml
apiVersion: v1
kind: Service
metadata:
  name: janus-core
  namespace: janus
  labels:
    app: janus-core
spec:
  ports:
  - name: http
    port: 8080
    targetPort: 8080
  selector:
    app: janus-core
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: janus-core
  namespace: janus
spec:  
  replicas: 1
  selector:
    matchLabels:
      app: janus-core
  template:
    metadata:
      labels:
        app: janus-core
        version: 0.0.5
    spec:
      containers:
      - image: dnulnets/janus-core:0.0.5
        imagePullPolicy: IfNotPresent
        name: janus-core
#        env: []
        ports:
        - containerPort: 8080
          name: http
        - containerPort: 8443
          name: https
