kubernetes/istio.yaml
apiVersion: networking.istio.io/v1alpha3
kind: Gateway
metadata:
  name: janus
  namespace: janus
spec:
  selector:
    istio: ingressgateway
  servers:
    - port:
        number: 443
        name: https
        protocol: HTTPS
      tls:
        mode: SIMPLE
        credentialName: host-certificate
      hosts:
        - "host.name.se"
---
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: janus
  namespace: janus
spec:
  hosts:
  - "host.name.se"
  gateways:
  - janus
  http:
  - name: janus-core
    match:
    - uri:
        prefix: /
    route:
    - destination:
        host: janus-core
        port:
          number: 8080
